--- a/pom.xml
+++ b/pom.xml
@@ -122,15 +122,15 @@
 
 
     <build>
-        
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <fork>true</fork>
+                    <executable>C:\Program Files\Java\jdk1.7.0_45\bin\javac.exe</executable>
                 </configuration>
             </plugin>
         </plugins>
