--- a/pom.xml
+++ b/pom.xml
@@ -121,31 +121,31 @@
     </dependencies>
 
 
-    <build>
+<!--    <build>-->
 
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <fork>true</fork>
-                    <executable>C:\Program Files\Java\jdk1.7.0_45\bin\javac.exe</executable>
-                </configuration>
-            </plugin>
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <version>3.8.1</version>-->
+<!--                <configuration>-->
+<!--                    <fork>true</fork>-->
+<!--                    <executable>C:\Program Files\Java\jdk1.7.0_45\bin\javac.exe</executable>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 
 
-            <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-                <source>1.8.0_241</source>
-                <target>1.8.0_241</target>
-            </configuration>
-        </plugin>
-        </plugins>
+<!--            <plugin>-->
+<!--            <groupId>org.apache.maven.plugins</groupId>-->
+<!--            <artifactId>maven-compiler-plugin</artifactId>-->
+<!--            <version>3.8.1</version>-->
+<!--            <configuration>-->
+<!--                <source>1.8.0_241</source>-->
+<!--                <target>1.8.0_241</target>-->
+<!--            </configuration>-->
+<!--        </plugin>-->
+<!--        </plugins>-->
 
-    </build>
+<!--    </build>-->
 
 </project>
