--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <type>maven-plugin</type>
+        </dependency>
+
     </dependencies>
 
 
