--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,15 @@
     <artifactId>com.GridTest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
+
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -128,54 +137,5 @@
     </dependencies>
 
 
-    <build>
-
-       
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.8.1</version>-->
-<!--                <configuration>-->
-<!--                    <fork>true</fork>-->
-<!--                    <executable>C:\Program Files\Java\jdk1.7.0_45\bin\javac.exe</executable>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
-
-
-                <!-- To define the plugin version in your parent POM -->
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <version>3.8.1</version>
-                        </plugin>
-                        ...
-                    </plugins>
-                </pluginManagement>
-                <!-- To use the plugin goals in your POM or parent POM -->
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.1</version>
-                    </plugin>
-<!--                    ...-->
-<!--                </plugins>-->
-<!--           -->
-
-<!--            <plugin>-->
-<!--            <groupId>org.apache.maven.plugins</groupId>-->
-<!--            <artifactId>maven-compiler-plugin</artifactId>-->
-<!--            <version>3.8.1</version>-->
-<!--            <configuration>-->
-<!--                <source>1.8.0_241</source>-->
-<!--                <target>1.8.0_241</target>-->
-<!--            </configuration>-->
-<!--        </plugin>-->
-        </plugins>
-
-    </build>
 
 </project>
